--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# OS cache files
+.DS_Store
+Thumbs.db
+
 # User-specific files
 *.suo
 *.user
